--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +32,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cód.</th>\n",
+       "      <th>Escola</th>\n",
+       "      <th>endereco</th>\n",
+       "      <th>num</th>\n",
+       "      <th>bairro</th>\n",
+       "      <th>municipio</th>\n",
+       "      <th>DDD</th>\n",
+       "      <th>Telefone</th>\n",
+       "      <th>CEP</th>\n",
+       "      <th>E-mail</th>\n",
+       "      <th>Dependência</th>\n",
+       "      <th>endereco_completo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12203</td>\n",
+       "      <td>CEDUP ABILIO PAULO</td>\n",
+       "      <td>AVENIDA UNIVERSITARIA</td>\n",
+       "      <td>345</td>\n",
+       "      <td>UNIVERSITARIO</td>\n",
+       "      <td>CRICIÚMA</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>34031609</td>\n",
+       "      <td>88806000</td>\n",
+       "      <td>cedupcriciuma@sed.sc.gov.br</td>\n",
+       "      <td>Estaduais</td>\n",
+       "      <td>AVENIDA UNIVERSITARIA, 345 - UNIVERSITARIO, CR...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32131</td>\n",
+       "      <td>CEDUP CAETANO COSTA</td>\n",
+       "      <td>BR 282 KM 246</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ITARARE</td>\n",
+       "      <td>SÃO JOSÉ DO CERRITO</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>88081661</td>\n",
+       "      <td>88570000</td>\n",
+       "      <td>seriedh27cedupccosta@sed.sc.gov.br</td>\n",
+       "      <td>Estaduais</td>\n",
+       "      <td>BR 282 KM 246, 0 - ITARARE, SÃO JOSÉ DO CERRIT...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103225</td>\n",
+       "      <td>CEDUP CAMPO ERE</td>\n",
+       "      <td>FAZENDA PRIMAVERA SC 160 KM 07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>INTERIOR</td>\n",
+       "      <td>CAMPO ERÊ</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>36551268</td>\n",
+       "      <td>89980000</td>\n",
+       "      <td>cedupcampoere@sed.sc.gov.br</td>\n",
+       "      <td>Estaduais</td>\n",
+       "      <td>FAZENDA PRIMAVERA SC 160 KM 07, 0 - INTERIOR, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20508</td>\n",
+       "      <td>CEDUP DARIO GERALDO SALLES</td>\n",
+       "      <td>R MONSENHOR GERCINO</td>\n",
+       "      <td>2071</td>\n",
+       "      <td>ITAUM</td>\n",
+       "      <td>JOINVILLE</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>34812135</td>\n",
+       "      <td>89210155</td>\n",
+       "      <td>diretor20508@sed.sc.gov.br</td>\n",
+       "      <td>Estaduais</td>\n",
+       "      <td>R MONSENHOR GERCINO, 2071 - ITAUM, JOINVILLE  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>700320</td>\n",
+       "      <td>CEDUP DE CHAPECÓ</td>\n",
+       "      <td>R ASSIS BRASIL</td>\n",
+       "      <td>119</td>\n",
+       "      <td>MARIA GORETTI</td>\n",
+       "      <td>CHAPECÓ</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>33220447</td>\n",
+       "      <td>89801222</td>\n",
+       "      <td>cedupchapeco@sed.sc.gov.br</td>\n",
+       "      <td>Estaduais</td>\n",
+       "      <td>R ASSIS BRASIL, 119 - MARIA GORETTI, CHAPECÓ  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7464</th>\n",
+       "      <td>158542</td>\n",
+       "      <td>VITAE INSTITUTO EDUCACIONAL - UNI ANGELINA</td>\n",
+       "      <td>RUA SÃO FRANCISCO DE ASSIS</td>\n",
+       "      <td>1315</td>\n",
+       "      <td>CENTRO</td>\n",
+       "      <td>ANGELINA</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>33522220</td>\n",
+       "      <td>88460000</td>\n",
+       "      <td>vitaeinstitutoeducacional2@gmail.com</td>\n",
+       "      <td>Particulares</td>\n",
+       "      <td>RUA SÃO FRANCISCO DE ASSIS, 1315 - CENTRO, ANG...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7465</th>\n",
+       "      <td>704407</td>\n",
+       "      <td>VITORIA SUPLETIVO CENTRO EDUCACIONAL LTDA</td>\n",
+       "      <td>R GERMANO BRANDES</td>\n",
+       "      <td>397</td>\n",
+       "      <td>CENTRO</td>\n",
+       "      <td>TIMBÓ</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>33822688</td>\n",
+       "      <td>89120000</td>\n",
+       "      <td>vitoriasupletivo@oi.com.br</td>\n",
+       "      <td>Particulares</td>\n",
+       "      <td>R GERMANO BRANDES, 397 - CENTRO, TIMBÓ        ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7466</th>\n",
+       "      <td>154512</td>\n",
+       "      <td>VIVA EDUCACAO INFANTIL</td>\n",
+       "      <td>RUA GENERAL CAMARA</td>\n",
+       "      <td>153</td>\n",
+       "      <td>BOM RETIRO</td>\n",
+       "      <td>JOINVILLE</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>30272500</td>\n",
+       "      <td>89222450</td>\n",
+       "      <td>janaina@vivaeduc.com.br</td>\n",
+       "      <td>Particulares</td>\n",
+       "      <td>RUA GENERAL CAMARA, 153 - BOM RETIRO, JOINVILL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7467</th>\n",
+       "      <td>639</td>\n",
+       "      <td>VIVENCIA PE E PRIMEIRO GRAU</td>\n",
+       "      <td>R ANGELO LA PORTA</td>\n",
+       "      <td>31</td>\n",
+       "      <td>CENTRO</td>\n",
+       "      <td>FLORIANÓPOLIS</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2221180</td>\n",
+       "      <td>88020600</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Particulares</td>\n",
+       "      <td>R ANGELO LA PORTA, 31 - CENTRO, FLORIANÓPOLIS ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7468</th>\n",
+       "      <td>147192</td>\n",
+       "      <td>WINNER 21 ESCOLA TECNICA</td>\n",
+       "      <td>R 280DE AGOSTO</td>\n",
+       "      <td>1818</td>\n",
+       "      <td>CENTRO</td>\n",
+       "      <td>GUARAMIRIM</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>33732515</td>\n",
+       "      <td>89270000</td>\n",
+       "      <td>mds.1964@hotmail.com</td>\n",
+       "      <td>Particulares</td>\n",
+       "      <td>R 280DE AGOSTO, 1818 - CENTRO, GUARAMIRIM     ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7469 rows × 12 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "cód.                   int64\n",
-       "Escola                object\n",
-       "endereco              object\n",
-       "num                   object\n",
-       "bairro                object\n",
-       "municipio             object\n",
-       "DDD                  float64\n",
-       "Telefone              object\n",
-       "CEP                   object\n",
-       "E-mail                object\n",
-       "Dependência           object\n",
-       "endereco_completo     object\n",
-       "dtype: object"
+       "        cód.                                      Escola  \\\n",
+       "0      12203                          CEDUP ABILIO PAULO   \n",
+       "1      32131                         CEDUP CAETANO COSTA   \n",
+       "2     103225                             CEDUP CAMPO ERE   \n",
+       "3      20508                  CEDUP DARIO GERALDO SALLES   \n",
+       "4     700320                            CEDUP DE CHAPECÓ   \n",
+       "...      ...                                         ...   \n",
+       "7464  158542  VITAE INSTITUTO EDUCACIONAL - UNI ANGELINA   \n",
+       "7465  704407   VITORIA SUPLETIVO CENTRO EDUCACIONAL LTDA   \n",
+       "7466  154512                      VIVA EDUCACAO INFANTIL   \n",
+       "7467     639                 VIVENCIA PE E PRIMEIRO GRAU   \n",
+       "7468  147192                    WINNER 21 ESCOLA TECNICA   \n",
+       "\n",
+       "                            endereco   num         bairro  \\\n",
+       "0              AVENIDA UNIVERSITARIA   345  UNIVERSITARIO   \n",
+       "1                      BR 282 KM 246     0        ITARARE   \n",
+       "2     FAZENDA PRIMAVERA SC 160 KM 07     0       INTERIOR   \n",
+       "3                R MONSENHOR GERCINO  2071          ITAUM   \n",
+       "4                     R ASSIS BRASIL   119  MARIA GORETTI   \n",
+       "...                              ...   ...            ...   \n",
+       "7464      RUA SÃO FRANCISCO DE ASSIS  1315         CENTRO   \n",
+       "7465               R GERMANO BRANDES   397         CENTRO   \n",
+       "7466              RUA GENERAL CAMARA   153     BOM RETIRO   \n",
+       "7467               R ANGELO LA PORTA    31         CENTRO   \n",
+       "7468                  R 280DE AGOSTO  1818         CENTRO   \n",
+       "\n",
+       "                           municipio   DDD  Telefone       CEP  \\\n",
+       "0     CRICIÚMA                        48.0  34031609  88806000   \n",
+       "1     SÃO JOSÉ DO CERRITO             49.0  88081661  88570000   \n",
+       "2           CAMPO ERÊ                 49.0  36551268  89980000   \n",
+       "3     JOINVILLE                       47.0  34812135  89210155   \n",
+       "4     CHAPECÓ                         49.0  33220447  89801222   \n",
+       "...                              ...   ...       ...       ...   \n",
+       "7464  ANGELINA                        47.0  33522220  88460000   \n",
+       "7465         TIMBÓ                    47.0  33822688  89120000   \n",
+       "7466  JOINVILLE                       47.0  30272500  89222450   \n",
+       "7467                   FLORIANÓPOLIS   4.0   2221180  88020600   \n",
+       "7468  GUARAMIRIM                      47.0  33732515  89270000   \n",
+       "\n",
+       "                                    E-mail   Dependência  \\\n",
+       "0              cedupcriciuma@sed.sc.gov.br     Estaduais   \n",
+       "1       seriedh27cedupccosta@sed.sc.gov.br     Estaduais   \n",
+       "2              cedupcampoere@sed.sc.gov.br     Estaduais   \n",
+       "3               diretor20508@sed.sc.gov.br     Estaduais   \n",
+       "4               cedupchapeco@sed.sc.gov.br     Estaduais   \n",
+       "...                                    ...           ...   \n",
+       "7464  vitaeinstitutoeducacional2@gmail.com  Particulares   \n",
+       "7465            vitoriasupletivo@oi.com.br  Particulares   \n",
+       "7466               janaina@vivaeduc.com.br  Particulares   \n",
+       "7467                                   NaN  Particulares   \n",
+       "7468                  mds.1964@hotmail.com  Particulares   \n",
+       "\n",
+       "                                      endereco_completo  \n",
+       "0     AVENIDA UNIVERSITARIA, 345 - UNIVERSITARIO, CR...  \n",
+       "1     BR 282 KM 246, 0 - ITARARE, SÃO JOSÉ DO CERRIT...  \n",
+       "2     FAZENDA PRIMAVERA SC 160 KM 07, 0 - INTERIOR, ...  \n",
+       "3     R MONSENHOR GERCINO, 2071 - ITAUM, JOINVILLE  ...  \n",
+       "4     R ASSIS BRASIL, 119 - MARIA GORETTI, CHAPECÓ  ...  \n",
+       "...                                                 ...  \n",
+       "7464  RUA SÃO FRANCISCO DE ASSIS, 1315 - CENTRO, ANG...  \n",
+       "7465  R GERMANO BRANDES, 397 - CENTRO, TIMBÓ        ...  \n",
+       "7466  RUA GENERAL CAMARA, 153 - BOM RETIRO, JOINVILL...  \n",
+       "7467  R ANGELO LA PORTA, 31 - CENTRO, FLORIANÓPOLIS ...  \n",
+       "7468  R 280DE AGOSTO, 1818 - CENTRO, GUARAMIRIM     ...  \n",
+       "\n",
+       "[7469 rows x 12 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +328,8 @@
     "df['CEP'] = df['CEP'].astype('str') \n",
     "\n",
     "df['endereco_completo'] = df['endereco'] + ', ' + df['num'] + ' - ' + df['bairro'] + ', ' + df['municipio']+ ' - SC, '+ df['CEP']\n",
-    "df['coordenadas'] = geolocator.geocode(str(df['endereco_completo']))"
+    "#df['coordenadas'] = geolocator.geocode(str(df['endereco_completo']))\n",
+    "df"
    ]
   }
  ],
